--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="calculator">
         <div class="display">
             <div class="previousNumber">
-                <p>123</p>
-                <span class="mathSign">123</span>
+                <p></p>
+                <span class="mathSign"></span>
             </div>
-            <p class="currentNumber">1231</p>
+            <p class="currentNumber"></p>
         </div>
     
     <div class="panel">
@@ -28,7 +28,7 @@
             :
         </button>
         <button class="operator">
-            *
+            x
         </button>
         <button class="number">
             7
